# fedSSL

./: .gitignore  .python-version  README.md  app.py  central.py  centralized_model.py  client.py  datalog.csv  dataset.py  log.txt  main.py  model.py  pyproject.toml  requirements.txt  run.sh  server.py  test.py  transform.py  utils.py
conf/: conf.yaml
fedSSL/: __init__.py  client.py  client_app.py  log.txt  main.py  model.py  server_app.py  test.py  utils.py
log_files/: central_log.csv  datalog.csv  log.txt
