[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fedSSL"
version = "1.0.0"
description = "Federated Self-Supervised Learning with PyTorch and Flower"
license = "Apache-2.0"
dependencies = [
    "flwr[simulation]>=1.10.0",
    "flwr-datasets[vision]>=0.3.0",
    "torch==2.2.1",
    "torchvision==0.17.1",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "flwrlabs"

[tool.flwr.app.components]
serverapp = "fedSSL.server_app:app"
clientapp = "fedSSL.client_app:app"

[tool.flwr.app.config]
num-server-rounds = 5
fraction-evaluate = 1
local-epochs = 1
learning-rate = 0.1
batch-size = 512


[tool.flwr.federations]
default = "local-simulation"

[tool.flwr.federations.local-simulation]
options.num-supernodes = 10